tests/baselines/reference/genericIndexTypeHasSensibleErrorMessage.errors.txt
genericIndexTypeHasSensibleErrorMessage.ts(1,33): error TS1337: An index signature parameter type cannot be a literal type or generic type. Consider using a mapped object type instead.


==== genericIndexTypeHasSensibleErrorMessage.ts (1 errors) ====
    type Wat<T extends string> = { [x: T]: string };
                                    ~
!!! error TS1337: An index signature parameter type cannot be a literal type or generic type. Consider using a mapped object type instead.